Fix FLEXIAPI-458 Aligne the tooltips on the left Fix FLEXIAPI-459 Makes the form half the width Fix FLEXIAPI-460 Add conditions to display the dialogs

--- a/flexiapi/public/css/style.css
+++ b/flexiapi/public/css/style.css
@@ -1089,10 +1089,14 @@ span.line::before {
     background-image: linear-gradient(to right, var(--grey-3), transparent, var(--grey-3));
 }
 
+*:has(+i.tooltip) {
+    display: inline-block;
+}
+
 i.tooltip {
-    vertical-align: middle;
+    vertical-align: center;
     font-size: 2rem;
-    line-height: 3rem;
+    margin-left: 1rem;
 }
 
 i.tooltip:hover {
